Update the home page widget area using responsive column widgets. Remove the side bar from theme due to alignment issue with CSS. Getting ready for writing page template for phone pricing.

--- a/wp-content/themes/arcade-basic-child/style.css
+++ b/wp-content/themes/arcade-basic-child/style.css
@@ -51,3 +51,8 @@ License URI: http://www.gnu.org/licenses/gpl-3.0.html
                 transition: all 0.3s;
     }
 
+  .slogan li {
+    display: inline;
+    float: left;
+  }
+
